tests/NormalTests/paczka1/fuzzy1/69444494.err
Error in line 8: S189 S552 46,4
Error in line 3: yPWZq8b2v S785 92,8
Error in line 19: 2tyH2jBp A4 31,2
Error in line 9: S189 S189 99,1
